--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -21,7 +21,7 @@ jobs:
         run: npm install -g firebase-tools
 
       - name: Decode Firebase service account key
-        run: echo "${{ secrets.FIREBASE_SERVICE_ACCOUNT_KEY }}" | base64 -d > firebase-admin-key.json
+        run: echo "${{ secrets.FIREBASE_SERVICE_ACCOUNT_KEY }}"
 
       - name: Authenticate Firebase
         run: firebase login:ci --no-localhost
